--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
         <div class="menu">
             <div class="contenedor">
                 <p class="logo">Restaurant Home Page</p>
+                <img src="imagenes/menu.png" class="menu-icon" alt="">
                 <nav>
                     <ul>
                         <li><a href="">Home</a></li>
