Responsive and fixing some bugs

--- a/index.html
+++ b/index.html
@@ -7,18 +7,19 @@
     <link href="https://fonts.googleapis.com/css?family=Poppins" rel="stylesheet">
     <title>Restaurant Home Page</title>
 </head>
+
 <body>
     <header>
         <div class="menu">
             <div class="contenedor">
                 <p class="logo">Restaurant Home Page</p>
-                <img src="imagenes/menu.png" class="menu-icon" alt="">
+                <img src="img/menu.png" class="menu-icon " alt="">
                 <nav>
                     <ul>
-                        <li><a href="">Home</a></li>
-                        <li><a href="">Pricing</a></li>
-                        <li><a href="">About</a></li>
-                        <li><a href="">Contact</a></li>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#our-story">About</a></li>
+                        <li><a href="#testimonials">Testimonials</a></li>
+                        <li><a href="#contacto">Contact</a></li>
                     </ul>
                 </nav>
             </div>
@@ -67,7 +68,7 @@
 
                 <div class="foto">  </div>
 
-                <div class="texto">
+                <div class="texto" id="texto-2">
                     <ul>
                         <li class="precio">$53.3</li>
                         <li class="titulo">Chicken Breast</li>
@@ -79,7 +80,7 @@
             <div class="linea2">
                 <div class="foto hongos" style="width: 33.5%;">   </div>
 
-                <div class="texto" style="width: 30%;">
+                <div class="texto" style="width: 30%;" id="ultimo">
                     <ul>
                         <li class="precio">$40.5</li>
                         <li class="titulo">King Crabs</li>
@@ -155,7 +156,7 @@
             <div class="derecha">
                 <h3>Drop Us a Line</h3>
                 <p>Don’t be shy. Let us know if you have any questions!</p>
-                <a href="CONTACT US"></a>
+                <a href="">CONTACT US</a>
                 <h3 class="news">Our Newsletter</h3>
                 <p>Dialogue is an essential part of any script</p>
                 <form action="">
@@ -168,6 +169,12 @@
         
         </div>
     </section>
+
+    <script
+    src="https://code.jquery.com/jquery-3.4.1.min.js"
+    integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
+    crossorigin="anonymous"></script>
+    <script src="script.js"></script>
 
 </body>
 </html>
